feat: implement front-end structure

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/index.js",
     "db:generate": "node --import tsx ./node_modules/drizzle-kit/bin.cjs generate",
     "db:migrate": "tsx src/db/migrate.ts",
+    "db:seed": "tsx src/db/seed.ts",
     "db:studio": "dotenv -e .env -- drizzle-kit studio",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
