refactor: addressing chat bot comments

--- a/apps/frontend/biome.json
+++ b/apps/frontend/biome.json
@@ -6,6 +6,10 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "correctness": {
+        "noUnusedImports": "warn",
+        "noUnusedVariables": "warn"
+      },
       "suspicious": { "noExplicitAny": "error" }
     }
   },
