--- a/apps/backend/biome.json
+++ b/apps/backend/biome.json
@@ -10,6 +10,10 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "correctness": {
+        "noUnusedImports": "warn",
+        "noUnusedVariables": "warn"
+      },
       "suspicious": {
         "noExplicitAny": "error"
       },
