fix: addressing chatbot comments

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,12 +29,12 @@
     "fastify": "^5.1.0",
     "pg": "^8.13.1",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "fastify-type-provider-zod": "^4.0.2"
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
     "@biomejs/biome": "1.9.4",
-    "fastify-type-provider-zod": "^4.0.2",
     "vitest": "^2.1.6",
     "@types/node": "^22.10.1",
     "@types/pg": "^8.11.10",
