--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       NODE_ENV: development
       PORT: 3000
       DATABASE_URL: postgres://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-app}@db:5432/${POSTGRES_DB:-profit}
+      JWT_SECRET: ${JWT_SECRET:-your-secret-min-32-chars-change-in-production}
     ports:
       - "3000:3000"
     depends_on:
