fix: running the polish and pr-review commands

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "type": "module",
   "packageManager": "pnpm",
+  "exports": {
+    "./schemas/*": "./src/schemas/*.ts"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
