--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,10 +13,12 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "backend": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@tanstack/react-router": "^1.94.2",
-    "@tanstack/react-query": "^5.62.2"
+    "@tanstack/react-query": "^5.62.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
