--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:backend": "pnpm --filter backend test",
     "test:frontend": "pnpm --filter frontend test",
     "test:watch": "pnpm --filter backend run test:watch",
+    "test:e2e": "pnpm --filter frontend run test:e2e",
+    "test:e2e:watch": "pnpm --filter frontend run test:e2e:watch",
+    "test:e2e:ui": "pnpm --filter frontend run test:e2e:ui",
+    "test:e2e:install": "pnpm --filter frontend run test:e2e:install",
     "ci": "pnpm lint && pnpm build && pnpm test",
     "prepare": "husky",
     "db:generate": "pnpm --filter backend db:generate",
